# wallet-service-system

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/core/: __init__.py  celery_config.py  config.py  database.py
app/api/models/: __init__.py  base.py  user.py
app/api/routes/: __init__.py  api_keys.py  auth.py  wallet.py
app/api/routes/docs/: __init__.py  api_keys_docs.py  auth_docs.py  wallet_docs.py
app/api/schemas/: __init__.py  api_key.py  auth.py  wallet.py
app/api/services/: __init__.py  api_key_service.py  google_oauth_service.py  tasks.py  wallet_service.py
app/api/utils/: __init__.py  auth_middleware.py  background_tasks.py  exception_handlers.py  response_payload.py  security.py
